--- a/HDFS_tableau/HDFStoPostgreCovid.ipynb
+++ b/HDFS_tableau/HDFStoPostgreCovid.ipynb
@@ -105,7 +105,7 @@
    ],
    "source": [
     "covid_df = spark_hdfs.read.format(\"csv\").option(\"header\", True).option(\"separator\", \",\").load(\"hdfs:///user/teran45/covid/COVID-19 Activity.csv\")\n",
-    "titanicdf.show(10, False)"
+    "covid_df.show(10, False)"
    ]
   },
   {
@@ -144,7 +144,7 @@
     }
    ],
    "source": [
-    "titanicdf.select(\"COUNTY_NAME\",\"PROVINCE_STATE_NAME\",\"REPORT_DATE\",\"PEOPLE_DEATH_COUNT\").write.format(\"jdbc\").option(\"url\", \"jdbc:postgresql://localhost/spark_labs\") \\\n",
+    "covid_df.select(\"COUNTY_NAME\",\"PROVINCE_STATE_NAME\",\"REPORT_DATE\",\"PEOPLE_DEATH_COUNT\").write.format(\"jdbc\").option(\"url\", \"jdbc:postgresql://localhost/spark_labs\") \\\n",
     "    .option(\"driver\", \"org.postgresql.Driver\").option(\"dbtable\", \"covid\") \\\n",
     "    .option(\"user\", \"teran45\").option(\"password\", \"Bodyart56\").save()"
    ]
